refactor: Java 25 code modernization — unnamed variables, toList(), instanceof patterns
- Unnamed variables _ (JEP 456): 6 files — unused catch variables
- Collectors.toList() → .toList(): 14 files (19 sites, mutation-audited)
- instanceof pattern binding: MatchingUtilities.java
- Removed unused Collectors imports

All 1125 tests pass.